# finding-a-needle-code

./: .gitignore  .gitreview  .pre-commit-config.yaml  <Plug>_  Dockerfile  README.md  active_loop.py  patch_extraction.py  pyproject.toml  requirements.txt  requirements_secondary.txt  results.md  sampler_test.py  searching.py
notebook/: trafficSign-umap-plot-paper.ipynb
path/stanford_cars/: cars_train.tgz
scripts/: cards_to_files.py  cifar100_to_files.py  cifar10_to_files.py
src/: __init__.py  bokeh_plot.py  datasource.py  experiment_loop.py  patch_extraction.py  toy_exemple.py  train_few_shot.py  utils_active_loop.py  utils_plot.py  utils_search.py  utils_umap.py
src/active learning/: Retrieve.py  data.py
src/active_learning/: Retrieve.py  data.py  train.py
src/deprecated/: bokeh_plot.py  experiment_loop.py  train_few_shot.py
src/few_shot_learning/: __init__.py  balanced_loss.py  data_handler.py  datasets.py  omniglot.py  proto_net.py  proto_train.py  relation_net.py  relation_net_old.py  sampler.py  standard_net.py  traffic_signs.py  utils_train.py
src/searcher/: searcher.py
src/toy_exemple/: toy_exemple.py
tests/: relation_net_test.py  sampler_test.py  test_relation_net_omniglot.py  test_sampler.py
thesis_data_search/: datasource.py  utils_active_loop.py  utils_plot.py  utils_search.py
thesis_data_search/deprecated/: bokeh_plot.py  train_few_shot.py
thesis_data_search/few_shot_learning/: __init__.py  balanced_loss.py  proto_train.py  relation_net.py
thesis_data_search/pickles/: class_list.pkl  test_incl_partial.pkl
(+23 files in other folders)
